@@ -27,11 +27,10 @@ package org.argouml.notation.providers.uml;
 import java.text.ParseException;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
+import java.util.Map;
 import java.util.NoSuchElementException;
-import java.util.Vector;
 
 import org.apache.log4j.Logger;
 import org.argouml.application.events.ArgoEventPump;
@@ -43,6 +42,7 @@ import org.argouml.kernel.ProjectManager;
 import org.argouml.kernel.ProjectSettings;
 import org.argouml.model.Model;
 import org.argouml.notation.providers.MessageNotation;
+import org.argouml.util.CustomSeparator;
 import org.argouml.util.MyTokenizer;
 
 /**
@@ -88,9 +88,9 @@ public class MessageNotationUml extends MessageNotation {
         Logger.getLogger(MessageNotationUml.class);
 
     /**
-     * The vector of CustomSeparators to use when tokenizing parameters.
+     * The list of CustomSeparators to use when tokenizing parameters.
      */
-    private Vector parameterCustomSep;
+    private final List<CustomSeparator> parameterCustomSep;
 
     /**
      * The constructor.
@@ -99,7 +99,7 @@ public class MessageNotationUml extends MessageNotation {
      */
     public MessageNotationUml(Object message) {
         super(message);
-        parameterCustomSep = new Vector();
+        parameterCustomSep = new ArrayList<CustomSeparator>();
         parameterCustomSep.add(MyTokenizer.SINGLE_QUOTED_SEPARATOR);
         parameterCustomSep.add(MyTokenizer.DOUBLE_QUOTED_SEPARATOR);
         parameterCustomSep.add(MyTokenizer.PAREN_EXPR_STRING_SEPARATOR);
@@ -108,13 +108,13 @@ public class MessageNotationUml extends MessageNotation {
     /*
      * @see org.argouml.notation.providers.NotationProvider#parse(java.lang.Object, java.lang.String)
      */
-    public void parse(Object modelElement, String text) {
+    public void parse(final Object modelElement, final String text) {
         try {
             parseMessage(modelElement, text);
         } catch (ParseException pe) {
-            String msg = "statusmsg.bar.error.parsing.message";
-            Object[] args = {pe.getLocalizedMessage(),
-                new Integer(pe.getErrorOffset()), };
+            final String msg = "statusmsg.bar.error.parsing.message";
+            final Object[] args = {pe.getLocalizedMessage(),
+                Integer.valueOf(pe.getErrorOffset()), };
             ArgoEventPump.fireEvent(new ArgoHelpEvent(
                     ArgoEventTypes.HELP_CHANGED, this,
                     Translator.messageFormat(msg, args)));
@@ -132,9 +132,9 @@ public class MessageNotationUml extends MessageNotation {
      * Generates a textual description for a Message m.
      *
      * @see org.argouml.notation.providers.NotationProvider#toString(java.lang.Object, 
-     * java.util.HashMap)
+     * java.util.Map)
      */
-    public String toString(Object modelElement, HashMap args) {
+    public String toString(final Object modelElement, final Map args) {
         Iterator it;
         Collection pre;
         Object act;
@@ -459,10 +459,10 @@ public class MessageNotationUml extends MessageNotation {
         String paramExpr = null;
         String token;
         StringBuilder varname = null;
-        Vector predecessors = new Vector();
-        Vector seqno = null;
-        Vector currentseq = new Vector();
-        Vector args = null;
+        List<List> predecessors = new ArrayList<List>();
+        List seqno = null;
+        List currentseq = new ArrayList();
+        List args = null;
         boolean mustBePre = false;
         boolean mustBeSeq = false;
         boolean parallell = false;
@@ -591,7 +591,7 @@ public class MessageNotationUml extends MessageNotation {
 
                         predecessors.add(currentseq);
 
-                        currentseq = new Vector();
+                        currentseq = new ArrayList();
                         currentseq.add(null);
                         currentseq.add(null);
                     }
@@ -629,7 +629,7 @@ public class MessageNotationUml extends MessageNotation {
 
                             predecessors.add(currentseq);
 
-                            currentseq = new Vector();
+                            currentseq = new ArrayList();
                             currentseq.add(null);
                             currentseq.add(null);
                         }
@@ -695,7 +695,7 @@ public class MessageNotationUml extends MessageNotation {
 
                     if (!hasVal && !assigned && bp == token.length()) {
                         try {
-                            currentseq.set(currentseq.size() - 2, new Integer(
+                            currentseq.set(currentseq.size() - 2, Integer.valueOf(
                                     token));
                             assigned = true;
                         } catch (NumberFormatException nfe) { }
@@ -703,7 +703,7 @@ public class MessageNotationUml extends MessageNotation {
 
                     if (!hasOrd && !assigned && bp == 0) {
                         try {
-                            currentseq.set(currentseq.size() - 1, new Integer(
+                            currentseq.set(currentseq.size() - 1, Integer.valueOf(
                                     parseMsgOrder(token)));
                             assigned = true;
                         } catch (NumberFormatException nfe) { }
@@ -713,8 +713,8 @@ public class MessageNotationUml extends MessageNotation {
                             && bp < token.length()) {
                         Integer nbr, ord;
                         try {
-                            nbr = new Integer(token.substring(0, bp));
-                            ord = new Integer(
+                            nbr = Integer.valueOf(token.substring(0, bp));
+                            ord = Integer.valueOf(
                                     parseMsgOrder(token.substring(bp)));
                             currentseq.set(currentseq.size() - 2, nbr);
                             currentseq.set(currentseq.size() - 1, ord);
@@ -741,7 +741,7 @@ public class MessageNotationUml extends MessageNotation {
         if (paramExpr != null) {
             MyTokenizer st = new MyTokenizer(paramExpr, "\\,",
                     parameterCustomSep);
-            args = new Vector();
+            args = new ArrayList();
             while (st.hasMoreTokens()) {
                 token = st.nextToken();
 
@@ -767,7 +767,7 @@ public class MessageNotationUml extends MessageNotation {
                 }
             }
         } else if (mayDeleteExpr) {
-            args = new Vector();
+            args = new ArrayList();
         }
 
         if (LOG.isDebugEnabled()) {
@@ -784,7 +784,7 @@ public class MessageNotationUml extends MessageNotation {
             buf.append("predecessors: " + predecessors.size() + "\n");
             for (i = 0; i < predecessors.size(); i++) {
                 int j;
-                Vector v = (Vector) predecessors.get(i);
+                List v = predecessors.get(i);
                 buf.append("    Predecessor: ");
                 for (j = 0; v != null && j + 1 < v.size(); j += 2) {
                     if (j > 0) {
@@ -1096,7 +1096,7 @@ public class MessageNotationUml extends MessageNotation {
 
         if (fname != null && refindOperation) {
             Object role = Model.getFacade().getReceiver(mes);
-            Vector ops =
+            List ops =
                 getOperation(
                         Model.getFacade().getBases(role),
                         fname.trim(),
@@ -1131,14 +1131,14 @@ public class MessageNotationUml extends MessageNotation {
                                 Model.getFacade().getInteraction(mes)),
                         null,
                         null);
-            Vector pre = new Vector();
+            List pre = new ArrayList();
             Iterator it;
         predfor:
             for (i = 0; i < predecessors.size(); i++) {
                 it = roots.iterator();
                 while (it.hasNext()) {
                     Object msg =
-                        walkTree(it.next(), (Vector) predecessors.get(i));
+                        walkTree(it.next(), predecessors.get(i));
                     if (msg != null && msg != mes) {
                         if (isBadPreMsg(mes, msg)) {
                             String parseMsg = "parsing.error.message.one-pred";
@@ -1170,7 +1170,7 @@ public class MessageNotationUml extends MessageNotation {
      * @param path The path to walk in the call tree.
      * @return The message at the end of path, or <code>null</code>.
      */
-    private Object walkTree(Object root, Vector path) {
+    private Object walkTree(Object root, List path) {
         int i;
         for (i = 0; i + 1 < path.size(); i += 2) {
             int bv = 0;
@@ -1511,13 +1511,13 @@ public class MessageNotationUml extends MessageNotation {
      *            MMessage
      */
     private void insertSuccessor(Object m, Object s, int p) {
-        Vector v = new Vector(Model.getFacade().getSuccessors(m));
-        if (v.size() > p) {
-            v.insertElementAt(s, p);
+        List successors = new ArrayList(Model.getFacade().getSuccessors(m));
+        if (successors.size() > p) {
+            successors.add(p, s);
         } else {
-            v.add(s);
+            successors.add(s);
         }
-        Model.getCollaborationsHelper().setSuccessors(m, v);
+        Model.getCollaborationsHelper().setSuccessors(m, successors);
     }
 
     /**
@@ -1530,8 +1530,8 @@ public class MessageNotationUml extends MessageNotation {
      * @param params the number of parameters of the operation to be found
      * @return the sought operation
      */
-    private Vector getOperation(Collection c, String name, int params) {
-        Vector options = new Vector();
+    private List getOperation(Collection c, String name, int params) {
+        List options = new ArrayList();
         Iterator it;
 
         if (name == null || name.length() == 0) {
@@ -1600,18 +1600,12 @@ public class MessageNotationUml extends MessageNotation {
      * Counts the number of parameters that are not return values.
      */
     private int countParameters(Object bf) {
-        Collection c = Model.getFacade().getParameters(bf);
-        Iterator it = c.iterator();
         int count = 0;
-
-        while (it.hasNext()) {
-            Object p = it.next();
-            if (Model.getFacade().isReturn(p)) {
-                continue;
+        for (Object parameter : Model.getFacade().getParameters(bf)) {
+            if (!Model.getFacade().isReturn(parameter)) {
+                count++;
             }
-            count++;
         }
-
         return count;
     }
 
