@@ -26,7 +26,7 @@ package org.argouml.notation.providers.uml;
 
 import java.text.ParseException;
 import java.util.Collection;
-import java.util.HashMap;
+import java.util.Map;
 import java.util.Iterator;
 import java.util.Stack;
 
@@ -69,7 +69,7 @@ public class ModelElementNameNotationUml extends ModelElementNameNotation {
             String msg = "statusmsg.bar.error.parsing.node-modelelement";
             Object[] args = {
                 pe.getLocalizedMessage(),
-                new Integer(pe.getErrorOffset()),
+                Integer.valueOf(pe.getErrorOffset()),
             };
             ArgoEventPump.fireEvent(new ArgoHelpEvent(
                     ArgoEventTypes.HELP_CHANGED, this,
@@ -85,9 +85,9 @@ public class ModelElementNameNotationUml extends ModelElementNameNotation {
     }
 
     /*
-     * @see org.argouml.notation.providers.NotationProvider#toString(java.lang.Object, java.util.HashMap)
+     * @see org.argouml.notation.providers.NotationProvider#toString(java.lang.Object, java.util.Map)
      */
-    public String toString(Object modelElement, HashMap args) {
+    public String toString(Object modelElement, Map args) {
         String name = Model.getFacade().getName(modelElement);
         StringBuffer sb = new StringBuffer("");
         if (isValue("fullyHandleStereotypes", args)) {
@@ -108,7 +108,7 @@ public class ModelElementNameNotationUml extends ModelElementNameNotation {
      * @param args arguments that influence the generation
      * @return a string which represents the stereotypes
      */
-    protected String generateStereotypes(Object modelElement, HashMap args) {
+    protected String generateStereotypes(Object modelElement, Map args) {
         Collection c = Model.getFacade().getStereotypes(modelElement);
         StringBuffer sb = new StringBuffer(50);
         Iterator i = c.iterator();
@@ -136,7 +136,7 @@ public class ModelElementNameNotationUml extends ModelElementNameNotation {
      * @param args arguments that influence the generation
      * @return a string which represents the path
      */
-    protected String generatePath(Object modelElement, HashMap args) {
+    protected String generatePath(Object modelElement, Map args) {
         StringBuilder s = new StringBuilder();
         if (isValue("pathVisible", args)) {
             Object p = modelElement;
@@ -162,7 +162,7 @@ public class ModelElementNameNotationUml extends ModelElementNameNotation {
      * @param args arguments that influence the generation
      * @return a string representing the visibility
      */
-    protected String generateVisibility(Object modelElement, HashMap args) {
+    protected String generateVisibility(Object modelElement, Map args) {
         String s = "";
         if (isValue("visibilityVisible", args)) {
             Object v = Model.getFacade().getVisibility(modelElement);
